<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">schedule_test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- SUN to SAT -->
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thr">THR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    
</resources>
